--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,8 @@
         android:theme="@style/Theme.RSSFeedApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.home.HomeActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.RSSFeedApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
