--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${ver.constraintLayout}"
     implementation "androidx.navigation:navigation-fragment-ktx:${ver.navigationKtx}"
     implementation "androidx.navigation:navigation-ui-ktx:${ver.navigationKtx}"
+    implementation "androidx.work:work-runtime-ktx:${ver.workRuntimeKtx}"
+    implementation "androidx.preference:preference-ktx:${ver.preferenceKtx}"
 
     implementation "com.github.bumptech.glide:glide:${ver.glide}"
     kapt "com.github.bumptech.glide:compiler:${ver.glide}"
